@@ -1602,13 +1602,14 @@ void esrv_update_spells(player *pl) {
 
 void esrv_remove_spell(player *pl, object *spell) {
     SockList sl;
-
-    if (!pl->socket.monitor_spells)
-        return;
+    
     if (!pl || !spell || spell->env != pl->ob) {
         LOG(llevError, "Invalid call to esrv_remove_spell\n");
         return;
     }
+    if (!pl->socket.monitor_spells)
+        return;
+
     SockList_Init(&sl);
     SockList_AddString(&sl, "delspell ");
     SockList_AddInt(&sl, spell->count);
